2017-07-01  Markus Gans  <guru.mail@muenster.de>
	* All in FOptiMove required termcap values can now be passed 
          with a single struct

2017-06-25  Markus Gans  <guru.mail@muenster.de>
	* All termcap values required in FOptiAttr can now be passed 
	  with a single struct

2017-06-17  Markus Gans  <guru.mail@muenster.de>
	* Added special console options for FreeBSD, NetBSD and OpenBSD

2017-06-12  Markus Gans  <guru.mail@muenster.de>
	* Linux functions from FTerm moved into the FTermLinux class

2017-05-27  Markus Gans  <guru.mail@muenster.de>
	* Move FreeBSD, NetBSD and OpenBSD functions to separate classes

2017-05-20  Markus Gans  <guru.mail@muenster.de>
	* Methods outsourcing from FTerm to FTermXTerminal

2017-05-06  Markus Gans  <guru.mail@muenster.de>
	* Some protected data members in FTerm moved to private

2017-05-03  Markus Gans  <guru.mail@muenster.de>
	* Fix resetColorMap in FTerm

2017-05-02  Markus Gans  <guru.mail@muenster.de>
	* Outsourcing of data from FTerm to the classes FTermios, 
	  FTermDetection and FTermcapQuirks

2017-04-19  Markus Gans  <guru.mail@muenster.de>
	* Placing the terminal types in FTerm in a separate structure

2017-04-15  Markus Gans  <guru.mail@muenster.de>
	* Fake-reverse bugfix in FOptiAttr
	* Strict use of fc::colornames in FOptiAttr
	* Stream support for FPoint and FRect

2017-04-11  Markus Gans  <guru.mail@muenster.de>
	* Remove Cygwin bold color quirks fix in FOptiAttr
	* Added unit test for FOptiAttr

2017-04-08  Markus Gans  <guru.mail@muenster.de>
	* Improved Linux terminal quirks
	* Improvement in class FOptiAttr

2017-04-02  Markus Gans  <guru.mail@muenster.de>
	* Improved cygwin terminal quirks
	* Optimized character set switching in FOptiAttr

2017-03-30  Markus Gans  <guru.mail@muenster.de>
	* Added unit test for FOptiMove

2017-03-28  Markus Gans  <guru.mail@muenster.de>
	* Add boundary check to FOptiMove

2017-03-25  Markus Gans  <guru.mail@muenster.de>
	* Added unit test for the mouse classes