@@ -1,3 +1,6 @@
+2017-07-08  Markus Gans  <guru.mail@muenster.de>
+	* Extension of the unit test of FOptiMove
+
 2017-07-01  Markus Gans  <guru.mail@muenster.de>
 	* All in FOptiMove required termcap values can now be passed 
           with a single struct
